modifikasi akhir swagger dan car controller & route
